--- a/service-showTime.yml
+++ b/service-showTime.yml
@@ -14,3 +14,7 @@ spring:
     platform: h2
     username: sa
     password:
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:9010/eureka/
