--- a/service-user.yml
+++ b/service-user.yml
@@ -14,6 +14,14 @@ spring:
     platform: h2
     username: sa
     password:
+  management:
+    endpoints:
+      web:
+        exposure:
+         include: "*"
+    endpoints:
+      health:
+       show-details: always
 eureka:
   client:
     serviceUrl:
